DEVELOPMENT VERSION

- EstimationTask class changed to include a parameter that specifies whether the training data is required for the evaluator function to calculate the metrics.
- Example of user-defined function in EstimationTask documentation was corrected.
- Documentation of the subset method of ComparisonResults objects was corrected to refer the parameter partial.
- Corrected bug on the way mcEstimates accessed the user suplied dataSplits

VERSION 1.0.0 (2014-12-02)

- Very radical change on the package introducing incompatibilities with 
  the version 0.x.y versions. A kind of fresh new re-start for the 
  package.
- Far too many changes to be written here. You are strongly advised to 
  check the included package vignette to check the new way the package 
  works. 

VERSION 0.1.1 (2014-03-11)

- corrections to Citation and minor stuff on package vignette
- corrected bug on subset method for class ComparisonResults
- corrected bug on topPerformers() function
- corrected but on workflowVariants() when using a benefit matrix